--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
 <link href="portfolio.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
-
-	
-
-	
-	
 	<header>
+	<!--Navigation bar-->
 		<div class="wrapper">
 			<nav>
+				<!--Hamburger menu for small Screens-->
 				<label for="toggle" class="menutoggle"><i class="fas fa-ellipsis-v"></i></label>
 				<input type="checkbox" id="toggle"/>
+				<!--Menu-->
 				<div class="menu">
 					<ul>
 						<li><a href="#gallery-projects">Projects</a></li>
@@ -31,23 +29,23 @@
 		</div>
 	</header>
 </head>
-
+	
 <body>
 	<main>
+		<!--Box for Name and Logo-->
 		<div class="central-box">		
 			<div class="logo"><img src="Portfolio Images/logo.png" alt="logo"></div>
   			<div class="name">Iosifina Margari</div>
-			
 		</div>
 		
 		
-<div class="background">
-		</div> 
-		
+		<div class="background"></div> 
+		<!--Button to scroll down-->
 		<section id="section05" class="demo">
   			<a href="#gallery-projects"><span></span></a>
 		</section>
-
+		
+		<!--Section 1 - Projects-->
 		<div class="title-01" id="gallery-projects">01</div>
 		<div class="Projects-Title">Projects</div>
 		
@@ -86,9 +84,7 @@
 			</div>
 		</div>
 		
-
-		
-	
+			<!--Section 2 - About me-->
 			<div class="coveraboutme" id="aboutme"></div>
 			<div class="box-aboutme">
 				<div class="title-02" >02</div>
@@ -100,7 +96,7 @@
 						the journey on my sites or products. Currently I am studying for a Master of Engineering (M.Eng.) focused in Product and Systems Design Engineering. Alongside, I work voluntarily as Social Media Manager, in <a href="https://www.facebook.com/TEDxUniversityoftheAegean/" target="_blank">TEDxUniversityoftheAegean.</a>
 					</p>
 				</div>
-		
+				<!--Button for CV Pop Up Window-->
 				<button id="cv" class="CV">CV</button>
 				
 				<div id="cvpopup" class="cvpopup">
@@ -113,6 +109,7 @@
 				<div class="followme">
 					Follow me on Social Media
 				</div>
+				<!--Social Media icons-->
 					<div class="socialmediaicons">
 						<ul>
 							<li><a href="https://www.facebook.com/iwchfinaa" target="_blank">
@@ -138,7 +135,7 @@
 					</div>
 			
 		
-		
+		<!--Section 3 - what i do-->
 		<div class="design" id="Design">
 			<div class="whatido-03">03</div>
 			<div class="whatido-title">What I do</div>
@@ -173,7 +170,7 @@
 	
 	
 <footer>
-		
+	<!--Section 4 - Find me-->	
 	<div class="findme-whitebox">
 		<div class="grey box">
 			<div class="find me" id="Findme">
@@ -195,7 +192,7 @@
 		</div>
 		
 			
-	
+	<!--Button for Map View Pop Up Window-->
 			<button id="mappopup" class="button-map" >Map View</button>
 			
 			<div id="simplePopup" class="popup">
